welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: ';' expected but 'true' found.
  if (n>=1 && n<=10 && outsideMode==false) || outsideMode==true && (n<=1|| n>=10 ){
                                                           ^